--- a/mvp/src/App.css
+++ b/mvp/src/App.css
@@ -1,38 +1,87 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+
+}
+.two{
+  padding: 20px;
+  text-align: center;
+}
+ 
+
+ 
+.giver{
+  color: goldenrod;
+  font-size: medium;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 
+  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+}
+.giver1{
+  color: goldenrod;
+  font-size: medium;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 
+  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+}
+
+
+
+.join{
+  position:absolute;
+  margin: 200px;
+} 
+
+
+
+
+
+
+
+.join-form{
+  
+display: flex;
+flex-direction: column;  
+  
+}
+
+.reg{
   color: white;
+  font-style: italic;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.radio-container {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.radio-container label {
+  margin-right: 10px;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
+
+}
+.services,.does,.meal,.postpartum,.newborn,.mother,.breastfeeding,.about{
+  position: absolute;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 3rem;
+
+}
+ /* html, body{
+  margin: 0; 
+   padding: 0; 
+   overflow-x: hidden;
+   
+  
+}  */
