--- a/mvp/src/pages/dropdown.css
+++ b/mvp/src/pages/dropdown.css
@@ -23,3 +23,21 @@
     color: #fff;
    
 }
+.dropdown-menu.clicked {
+    display: none;
+    
+}
+
+.dropdown-menu li:hover{
+    background-color: #1888ff;
+    border-radius: 4px;
+    transition: all 0.2s ease-out;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    -ms-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+}
